--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
                 </div>
             </div>
         </section>
+        <section style="margin-top: 30px;">
+          <div class="container">
+            <h2 class="font-weight-bold" style="text-align: center;">Discover more about our services</h2> 
+            <div class="embed-responsive embed-responsive-16by9">
+              <video width="320" height="240" autoplay="autoplay" controls >
+                <source src="src/video2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
+          </div>
+        </section>
 
      <div class="section-footer"></div>
 
